refactor(apps): reorganize Java application structure and consolidate versions