@@ -8,7 +8,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-// Virtual thread generator for profiling - uses Thread.ofVirtual() (Java 21+)
 @Service
 public class ThreadGeneratorService {
     private static final Logger logger = LoggerFactory.getLogger(ThreadGeneratorService.class);
@@ -24,13 +23,13 @@ public class ThreadGeneratorService {
         logger.info("Starting {} threads", threadCount);
 
         for (int i = 0; i < threadCount; i++) {
-            var thread = Thread.ofPlatform()
-                    .name("DummyThread-" + i)
-                    .start(new DummyWorkload(running));
+            Thread thread = new Thread(new DummyWorkload(running));
+            thread.setName("DummyThread-" + i);
             activeThreads.add(thread);
+            thread.start();
         }
 
-        logger.info("Started {} platform threads", threadCount);
+        logger.info("Started {} threads", threadCount);
     }
 
     public synchronized void stopThreads() {
@@ -44,11 +43,9 @@ public class ThreadGeneratorService {
         // Wait for all threads to complete
         activeThreads.forEach(thread -> {
             try {
-                thread.join(java.time.Duration.ofSeconds(5));
-            } catch (InterruptedException _) {
-                // Java 22 unnamed variable (_)
+                thread.join(5000); // Wait up to 5 seconds for each thread
+            } catch (InterruptedException e) {
                 logger.warn("Interrupted while waiting for thread {} to stop", thread.getName());
-                Thread.currentThread().interrupt();
             }
         });
 
@@ -60,28 +57,25 @@ public class ThreadGeneratorService {
         return activeThreads.size();
     }
 
-    // Dummy workload for profiling - volatile blackhole prevents JIT elimination
     private static class DummyWorkload implements Runnable {
         private final AtomicBoolean running;
-        @SuppressWarnings("unused")
-        private static volatile double blackhole;
 
-        DummyWorkload(AtomicBoolean running) {
+        public DummyWorkload(AtomicBoolean running) {
             this.running = running;
         }
 
         @Override
         public void run() {
             while (running.get()) {
+                // Simulate some work
                 try {
-                    var result = 0.0;
+                    // Calculate some dummy values to keep CPU busy
+                    double result = 0;
                     for (int i = 0; i < 1000; i++) {
                         result += Math.sqrt(i) * Math.random();
                     }
-                    blackhole = result;
-                    Thread.sleep(java.time.Duration.ofMillis(100));
-                } catch (InterruptedException _) {
-                    // Java 22 unnamed variable (_)
+                    Thread.sleep(100); // Sleep to prevent excessive CPU usage
+                } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
                     break;
                 }
